Atualizar o atividades.html

--- a/pages/atividades.html
+++ b/pages/atividades.html
@@ -93,8 +93,8 @@
         <section id="linguagens" class="subject hidden">
             <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">Revista Literária</h2>
-                <p>Desenvolvimento de uma revista literária interativa, onde foram abordadas obras literárias clássicas
-                    brasileiras. O projeto envolveu resenhas, artigos e discussões sobre as influências e o impacto das
+                <p>Desenvolvimento de uma revista literária, onde foram abordadas obras literárias clássicas
+                    brasileiras requisitadas pela UFSC (Singradura, Torto Arado, Velhos e Solitára). O projeto envolveu resenhas, artigos e discussões sobre as influências e o impacto das
                     obras na sociedade brasileira.</p>
                 <iframe width="300" height="400" allowfullscreen
                     src="https://www.canva.com/design/DAGDPv_Q5gw/EqHlv4l1uQE27M6BvuInxw/view?embed" frameborder="2"
@@ -155,8 +155,8 @@
         <section id="natureza" class="subject hidden">
             <div class="max-w-4xl mx-auto p-6 bg-gray-100">
                 <h2 class="text-lg font-bold mb-4">EcoCraft</h2>
-                <p>Criação de um ecossistema e seus componentes no minecraft, essa atividade combinou a criatividade com
-                    a ilustração de termos usados na biologia</p>
+                <p>Criação de um ecossistema (Mangue) e seus componentes no minecraft, essa atividade combinou a criatividade com
+                    a ilustração de termos usados na ecologia</p>
                 <iframe width="500" height="400" allowfullscreen src="https://www.youtube.com/embed/zW-JSZltQiM"
                     frameborder="2" class="mt-4 w-full"></iframe>
             </div>
