Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -91,6 +91,34 @@
             </div>
         </div>
     </div>
+<div class="flex w-full h-96 justify-center">
+            <div class="flex w-4/12 flex-col gap-4">
+                <h2 class="text-4xl font-extrabold text-center text-gray-200">Objetivos e perspectivas</h2>
+                <p class="text-gray-100 text-lg text-justify leading-6">
+                    Como desenvolvedor Front-End, meu objetivo é criar interfaces que proporcionem experiências
+                    excepcionais para os usuários, enquanto avanço em minha carreira e habilidades.
+                </p>
+                <ul class="list-none text-lg text-gray-100 space-y-2">
+                    <li class="flex items-center">
+                        <i class="fas fa-globe-americas mr-2"></i>
+                        Aprimorar o conhecimento em inglês para oportunidades internacionais.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-laptop-house mr-2"></i>
+                        Trabalhar em regime home office e alcançar flexibilidade profissional.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-graduation-cap mr-2"></i>
+                        Realizar bacharelado em Ciência da Computação ou tecnólogo em Análise e Desenvolvimento
+                        de Sistemas.
+                    </li>
+                    <li class="flex items-center">
+                        <i class="fas fa-code mr-2"></i>
+                        Construir interfaces modernas e intuitivas para projetos inovadores.
+                    </li>
+                </ul>
+            </div>
+        </div>
 </body>
 
 </html>
